--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Crypto Hub</title>
   </head>
-  <body style="background-color: rgb(65, 96, 133);">
+  <body style="background-color: #195b5a; color: wheat; font-weight: 700;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
